@@ -15,6 +15,7 @@
 package ch.qos.logback.core.joran.util;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
 import ch.qos.logback.core.joran.spi.DefaultClass;
@@ -29,8 +30,8 @@ import ch.qos.logback.core.util.PropertySetterException;
 /**
  * General purpose Object property setter. Clients repeatedly invokes
  * {@link #setProperty setProperty(name,value)} in order to invoke setters on
- * the Object specified in the constructor. This class relies on the JavaBeans
- * {@link Introspector} to analyze the given Object Class using reflection.
+ * the Object specified in the constructor. This class relies on reflection
+ * to analyze the given Object Class.
  *
  * <p>
  * Usage:
@@ -44,7 +45,7 @@ import ch.qos.logback.core.util.PropertySetterException;
  *
  * will cause the invocations anObject.setName("Joe"), anObject.setAge(32), and
  * setMale(true) if such methods exist with those signatures. Otherwise an
- * {@link IntrospectionException} are thrown.
+ * {@link PropertySetterException} is thrown.
  *
  * @author Anders Kristensen
  * @author Ceki Gulcu
@@ -214,17 +215,15 @@ public class PropertySetter extends ContextAwareBase {
         // returns null.
         Object o;
         try {
-            o = clazz.newInstance();
+            o = clazz.getDeclaredConstructor().newInstance();
             if (o != null) {
                 return true;
             } else {
                 return false;
             }
-        } catch (InstantiationException e) {
+        } catch (InstantiationException|IllegalAccessException | InvocationTargetException | NoSuchMethodException  e) {
             return false;
-        } catch (IllegalAccessException e) {
-            return false;
-        }
+        }  
     }
 
     public Class<?> getObjClass() {
